--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <p>My research broadly lies in Social Computing, Human-AI Interaction, and Health Informatics. I conduct <strong>theory-guided mix-method studies</strong> to understand the role of technology in addressing or exacerbating problems in social interactions and health and well-being.</p>
 
-        <p>Combining theoretical power and machine learning, statistical analyses, and natural language processing methods, I aspire to respond to real-world challenges, such as <strong>misinformation and hate speech, misuse of generative AI, social support strategies, and health equity</strong>.</p>
+        <p>Combining theoretical power and machine learning, statistical analyses, and natural language processing methods, I aspire to respond to real-world challenges, such as <strong>misinformation and hate speech, (mis)use of generative AI, social support strategies, and health equity</strong>.</p>
 
         <p>In my free time, I love to cuddle with my cat Kabi, travel, play badminton, and cook.</p>
         <!-- <p>In my free time, I love to <img class="icon" src="assets/icon/pet.png"> cuddle with my cat Kabi, <img class="icon" src="assets/icon/luggage.png"> travel, <img class="icon" src="assets/icon/badminton.png"> play badminton, and <img class="icon" src="assets/icon/cooking.png"> cook.</p> -->
