--- a/index.html
+++ b/index.html
@@ -20,17 +20,22 @@
         <div>
             <img class="profile" src="assets/zhou_profile.jpg">
         </div>
-        <div><p></p></div>
-        <h1>Jiawei Zhou<br><medium>周嘉玮 (she/her)</medium></h1>
-        <p>Ph.D. Student<br>Human-Centered Computing<br>Georgia Institute of Technology</p>
-        <!-- <p>Email: j [dot] zhou [at] gatech [dot] edu</p> -->
-
-        <a target="_blank" rel="noopener noreferrer" href="mailto:j.zhou@gatech.edu"><img class="contact" src="assets/icon/email.png"><strong>Email</strong></a><br>
-        <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/_jiawei_zhou"><img class="contact" src="assets/icon/twitter.png"><strong>Twitter</strong></a><br>
-        <a target="_blank" rel="noopener noreferrer" href="https://scholar.google.com/citations?user=WZZGUpMAAAAJ&hl=en"><img class="contact" src="assets/icon/scholar.png"><strong>Google Scholar</strong></a><br>
-        
         <br>
+        <div>
+          <h1>Jiawei Zhou<br><medium>周嘉玮 (she/her)</medium></h1>
+          <p>Ph.D. Student<br>Human-Centered Computing<br>Georgia Institute of Technology</p>
+          <!-- <p>Email: j [dot] zhou [at] gatech [dot] edu</p> -->
+        </div>
 
+        <div>
+          <a target="_blank" rel="noopener noreferrer" href="mailto:j.zhou@gatech.edu"><img class="contact" src="assets/icon/email.png"><strong>Email</strong></a>
+          <br>
+          <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/_jiawei_zhou"><img class="contact" src="assets/icon/twitter.png"><strong>Twitter</strong></a>
+          <br>
+          <a target="_blank" rel="noopener noreferrer" href="https://scholar.google.com/citations?user=WZZGUpMAAAAJ&hl=en"><img class="contact" src="assets/icon/scholar.png"><strong>Google Scholar</strong></a>
+          <br>
+        </div>
+        <br>
       </header>
 
       <section>
@@ -85,14 +90,11 @@
           IEEE 10th International Conference on Healthcare Informatics (ICHI), pp. 373-383. IEEE, 2022.
         </p>
 
-        <br>
+        <br><br>
 
         <h3>You can find more information in my <a target="_blank" rel="noopener noreferrer" href="assets/Zhou_CV.pdf">CV</a>.</h3>
 
-        <br><br>
-
-
-        <p><small>Built with <i class="fa-solid fa-music"></i> <i class="fa-solid fa-mug-saucer"></i>, <a target="_blank" rel="noopener noreferrer" href="https://github.com/orderedlist/minimal">Minimal Light</a> theme, and flaticon icons.</small></p>
+        <br>
 <!--         <blockquote>
         <p></p>
         </blockquote>
@@ -100,6 +102,9 @@
         <p><small>attributes</small></p> -->
 
       </section>
+
+      <p><small>Built with <i class="fa-solid fa-music"></i> <i class="fa-solid fa-mug-saucer"></i>, <a target="_blank" rel="noopener noreferrer" href="https://github.com/orderedlist/minimal">Minimal Light</a> theme, and flaticon icons.</small></p>
+
       <footer>
         
       </footer>
