--- a/index.html
+++ b/index.html
@@ -21,21 +21,16 @@
             <img class="profile" src="assets/zhou_profile.jpg">
         </div>
         <br>
-        <div>
-          <h1>Jiawei Zhou<br><medium>周嘉玮 (she/her)</medium></h1>
-          <p>Ph.D. Student<br>Human-Centered Computing<br>Georgia Institute of Technology</p>
-          <!-- <p>Email: j [dot] zhou [at] gatech [dot] edu</p> -->
-        </div>
+        <h1>Jiawei Zhou <front-medium1>周嘉玮 </front-medium1></h1>
+        <p>Ph.D. Student<br>Human-Centered Computing<br>Georgia Institute of Technology</p>
+        <!-- <p>Email: j [dot] zhou [at] gatech [dot] edu</p> -->
 
-        <div>
-          <a target="_blank" rel="noopener noreferrer" href="mailto:j.zhou@gatech.edu"><img class="contact" src="assets/icon/email.png"><strong>Email</strong></a>
-          <br>
-          <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/_jiawei_zhou"><img class="contact" src="assets/icon/twitter.png"><strong>Twitter</strong></a>
-          <br>
-          <a target="_blank" rel="noopener noreferrer" href="https://scholar.google.com/citations?user=WZZGUpMAAAAJ&hl=en"><img class="contact" src="assets/icon/scholar.png"><strong>Google Scholar</strong></a>
-          <br>
-        </div>
+        <a target="_blank" rel="noopener noreferrer" href="mailto:j.zhou@gatech.edu"><img class="contact" src="assets/icon/email.png"><strong>Email</strong></a><br>
+        <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/_jiawei_zhou"><img class="contact" src="assets/icon/twitter.png"><strong>Twitter</strong></a><br>
+        <a target="_blank" rel="noopener noreferrer" href="https://scholar.google.com/citations?user=WZZGUpMAAAAJ&hl=en"><img class="contact" src="assets/icon/scholar.png"><strong>Google Scholar</strong></a><br>
+        
         <br>
+
       </header>
 
       <section>
@@ -47,7 +42,7 @@
 
         <p>Combining theoretical power and machine learning, statistical analyses, and natural language processing methods, I aspire to respond to real-world challenges, such as <strong>misinformation and hate speech, (mis)use of generative AI, social support strategies, and health equity</strong>.</p>
 
-        <p>In my free time, I love to cuddle with my cat Kabi, travel, play badminton, and cook.</p>
+        <p>In my free time, I love to cuddle with my cat Kabi, travel, play badminton, and cook. <img class="icon" src="assets/icon/pet.png"> <img class="icon" src="assets/icon/luggage.png"> <img class="icon" src="assets/icon/badminton.png"> <img class="icon" src="assets/icon/cooking.png"></p>
         <!-- <p>In my free time, I love to <img class="icon" src="assets/icon/pet.png"> cuddle with my cat Kabi, <img class="icon" src="assets/icon/luggage.png"> travel, <img class="icon" src="assets/icon/badminton.png"> play badminton, and <img class="icon" src="assets/icon/cooking.png"> cook.</p> -->
 
 
@@ -94,20 +89,19 @@
 
         <h3>You can find more information in my <a target="_blank" rel="noopener noreferrer" href="assets/Zhou_CV.pdf">CV</a>.</h3>
 
-        <br>
+        <br><br><br>      
 <!--         <blockquote>
-        <p></p>
-        </blockquote>
-        <div></div> 
-        <p><small>attributes</small></p> -->
+          <p></p>
+        </blockquote> -->        
+
+        <p><small>Built with <i class="fa-solid fa-music"></i> <i class="fa-solid fa-mug-saucer"></i>, <a target="_blank" rel="noopener noreferrer" href="https://github.com/orderedlist/minimal">Minimal Light</a> theme, and flaticon icons.</small></p>
 
       </section>
 
-      <p><small>Built with <i class="fa-solid fa-music"></i> <i class="fa-solid fa-mug-saucer"></i>, <a target="_blank" rel="noopener noreferrer" href="https://github.com/orderedlist/minimal">Minimal Light</a> theme, and flaticon icons.</small></p>
-
       <footer>
-        
       </footer>
+
+
     </div>
     <script src="javascripts/scale.fix.js"></script>
   </body>
