--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <br><br>
 
-        <h3>You can find more information in my <a target="_blank" rel="noopener noreferrer" href="assets/Zhou_CV.pdf">CV</a>.</h3>
+        <h3>You can find more information in my <a target="_blank" rel="noopener noreferrer" href="https://www.dropbox.com/s/u7e7thbm15wpg02/Zhou_CV.pdf?dl=0">CV</a>.</h3>
 
         <br><br><br>      
 <!--         <blockquote>
