--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
         <p>Ph.D. Student<br>Human-Centered Computing<br>Georgia Institute of Technology</p>
         <!-- <p>Email: j [dot] zhou [at] gatech [dot] edu</p> -->
 
-        <a target="_blank" rel="noopener noreferrer" href="mailto:j.zhou@gatech.edu"><img class="contact" src="assets/icon/email.png"><strong>Email</strong></a><br>
-        <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/_jiawei_zhou"><img class="contact" src="assets/icon/twitter.png"><strong>Twitter</strong></a><br>
-        <a target="_blank" rel="noopener noreferrer" href="https://scholar.google.com/citations?user=WZZGUpMAAAAJ&hl=en"><img class="contact" src="assets/icon/scholar.png"><strong>Google Scholar</strong></a><br>
+        <div>
+          <a target="_blank" rel="noopener noreferrer" href="mailto:j.zhou@gatech.edu"><img class="contact" src="assets/icon/email.png"><strong>Email</strong></a><br>
+          <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/_jiawei_zhou"><img class="contact" src="assets/icon/twitter.png"><strong>Twitter</strong></a><br>
+          <a target="_blank" rel="noopener noreferrer" href="https://scholar.google.com/citations?user=WZZGUpMAAAAJ&hl=en"><img class="contact" src="assets/icon/scholar.png"><strong>Google Scholar</strong></a><br>
+        </div>
         
         <br>
 
@@ -38,7 +40,7 @@
 
         <p>I am a third-year PhD student in <a target="_blank" rel="noopener noreferrer" href="https://www.cc.gatech.edu/degree-programs/phd-human-centered-computing">Human-Centered Computing</a> at <a target="_blank" rel="noopener noreferrer" href="https://www.gatech.edu/">Georgia Tech</a>. I work in the <a target="_blank" rel="noopener noreferrer" href="https://socweb.cc.gatech.edu/">Social Dynamics and Wellbeing Lab</a> under the advisory of <a target="_blank" rel="noopener noreferrer" href="http://www.munmund.net/">Dr. Munmun De Choudhury</a>.</p>
 
-        <p>My research broadly lies in Social Computing, Human-AI Interaction, and Health Informatics. I conduct <strong>theory-guided mix-method studies</strong> to understand the role of technology in addressing or exacerbating problems in social interactions and health and well-being.</p>
+        <p>My research broadly lies in Social Computing, Human-AI Interaction, and Health Informatics. I adopt a <strong>theory-guided approach</strong> using <strong>quantitative and qualitative methods</strong> to understand the role of technology in addressing or exacerbating problems in social interactions and health and well-being.</p>
 
         <p>Combining theoretical power and machine learning, statistical analyses, and natural language processing methods, I aspire to respond to real-world challenges, such as <strong>misinformation and hate speech, (mis)use of generative AI, social support strategies, and health equity</strong>.</p>
 
@@ -89,16 +91,16 @@
 
         <h3>You can find more information in my <a target="_blank" rel="noopener noreferrer" href="https://www.dropbox.com/s/u7e7thbm15wpg02/Zhou_CV.pdf?dl=0">CV</a>.</h3>
 
-        <br><br><br>      
-<!--         <blockquote>
-          <p></p>
-        </blockquote> -->        
+        <br><br><br>            
 
         <p><small>Built with <i class="fa-solid fa-music"></i> <i class="fa-solid fa-mug-saucer"></i>, <a target="_blank" rel="noopener noreferrer" href="https://github.com/orderedlist/minimal">Minimal Light</a> theme, and flaticon icons.</small></p>
 
       </section>
 
       <footer>
+        <blockquote>
+          <p>If you can see, look.<br>If you can look, observe.</p>
+        </blockquote>     
       </footer>
 
 
