--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h2>NEWS</h2>
 
         <ul>
-          <li><strong>[Jan. 2023]</strong> Our paper "Synthetic Lies: Understanding AI-Generated Misinformation and Evaluating Applicability of Algorithmic and Human Solutions" got accepted to CHI2023!</li>
+          <li><strong>[Jan. 2023]</strong> Our paper "Synthetic Lies: Understanding AI-Generated Misinformation and Evaluating Applicability of Algorithmic and Human Solutions" got accepted to CHI2023! <i>(Top 14% of submissions)</i></li>
           <li><strong>[Apr. 2022]</strong> I passed my PhD qualifier!</li>
           <li><strong>[Dec. 2021]</strong> Our paper "Veteran Critical Theory as a Lens to Understand Veterans' Needs and Support on Social Media" has been accepted to CSCW! Will present this work next year in CSCW'22.</li>
           <li><strong>[Nov. 2021]</strong> Our paper "Perspectives on Integrating Trusted Other Feedback in Therapy for Veterans with PTSD" has been accepted to CHI!</li>
