--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
         <h1>Jiawei Zhou <front-medium1>周嘉玮 </front-medium1></h1>
         <p>Ph.D. Student<br>Human-Centered Computing<br>Georgia Institute of Technology</p>
         <!-- <p>Email: j [dot] zhou [at] gatech [dot] edu</p> -->
-
+        
         <div>
           <a target="_blank" rel="noopener noreferrer" href="mailto:j.zhou@gatech.edu"><img class="contact" src="assets/icon/email.png"><strong>Email</strong></a><br>
           <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/_jiawei_zhou"><img class="contact" src="assets/icon/twitter.png"><strong>Twitter</strong></a><br>
-          <!-- <a target="_blank" rel="noopener noreferrer" href="https://hci.social/@jiawei"><img class="contact" src="assets/icon/mastodon.png"><strong>Mastodon</strong></a><br> -->
           <a target="_blank" rel="noopener noreferrer" href="https://scholar.google.com/citations?user=WZZGUpMAAAAJ&hl=en"><img class="contact" src="assets/icon/scholar.png"><strong>Google Scholar</strong></a><br>
+          <a target="_blank" rel="noopener noreferrer" href="https://www.dropbox.com/s/u7e7thbm15wpg02/Zhou_CV.pdf?dl=0"><img class="contact" src="assets/icon/cv.png"><strong>CV</strong></a>
+          <!-- <a target="_blank" rel="noopener noreferrer" href="https://hci.social/@jiawei"><img class="contact" src="assets/icon/mastodon.png"><strong>Mastodon</strong></a><br> -->
         </div>
         
         <br>
@@ -113,12 +114,10 @@
           <u>Jiawei Zhou</u>, Rosa I. Arriaga, Hongfang Liu, Ming Huang<br>
           IEEE 10th International Conference on Healthcare Informatics (ICHI), pp. 373-383. IEEE, 2022.
           <br>
-          <img src="assets/img/ppef.png">
+          <img src="assets/img/ppe.png">
         </p>
 
         <br><br>
-
-        <h3>You can find more information in my <a target="_blank" rel="noopener noreferrer" href="https://www.dropbox.com/s/u7e7thbm15wpg02/Zhou_CV.pdf?dl=0">CV</a>.</h3>
 
         <br><br><br>            
 
@@ -127,6 +126,7 @@
       </section>
 
       <footer>
+
         <blockquote>
           <p>If you can see, look.<br>If you can look, observe.</p>
         </blockquote>     
