--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Jiawei Zhou</title>
-    <link rel="icon" href="assets/icon/weblogo.png">
+    <link rel="icon" href="assets/icon/jz.png">
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -22,9 +22,8 @@
             <img class="profile" src="assets/zhou_profile.jpg">
         </div>
         <div class="box">
-          <!-- <br> -->
-          <h1>Jiawei Zhou <front-medium1>周嘉玮 </front-medium1></h1>
-          <p>Ph.D. Student<br>Human-Centered Computing<br>Georgia Institute of Technology</p>
+          <p><h1>Jiawei Zhou <front-medium1>周嘉玮 </front-medium1></h1>
+          Ph.D. Student<br>Human-Centered Computing<br>Georgia Institute of Technology</p>
           <!-- <p>Email: j [dot] zhou [at] gatech [dot] edu</p> -->
 
           <a target="_blank" rel="noopener noreferrer" href="mailto:j.zhou@gatech.edu"><img class="contact" src="assets/icon/email.png">Email</a><br>
@@ -41,32 +40,32 @@
 
         <p>I am a third-year PhD student in <a target="_blank" rel="noopener noreferrer" href="https://www.cc.gatech.edu/degree-programs/phd-human-centered-computing">Human-Centered Computing</a> at <a target="_blank" rel="noopener noreferrer" href="https://www.gatech.edu/">Georgia Tech</a>. I work in the <a target="_blank" rel="noopener noreferrer" href="https://socweb.cc.gatech.edu/">Social Dynamics and Wellbeing (SocWeB) Lab</a> under the advisory of <a target="_blank" rel="noopener noreferrer" href="http://www.munmund.net/">Dr. Munmun De Choudhury</a>.</p>
 
-        <p>My research broadly lies in Social Computing, Human-AI Interaction, and Health Informatics. I adopt a <strong>theory-guided approach</strong> using <strong>quantitative and qualitative methods</strong> to understand the role of technology in addressing or exacerbating problems in social interactions and health and well-being.</p>
+        <p>My research broadly lies in Social Computing, Human-AI Interaction, and Health Informatics. I adopt a <strong>theory-guided approach</strong> using <strong>quantitative and qualitative methods</strong> to understand the impacts of collective narratives (e.g., misinformation, harmful speech, and counterspeech) and the role of generative AI in addressing or exacerbating related societal challenges.
+        <!-- understand the role of technology in addressing or exacerbating problems in social interactions and health and well-being.</p> -->
 
         <p>Combining theoretical power and machine learning, statistical analyses, and natural language processing methods, I aspire to respond to real-world challenges, such as <strong>misinformation and hate speech, (mis)use of generative AI, social support strategies, and health equity</strong>.</p>
 
-        <p>In my free time, I love to cuddle with my cat Kabi, travel, play badminton, and cook. <img class="icon" src="assets/icon/pet.png"> <img class="icon" src="assets/icon/luggage.png"> <img class="icon" src="assets/icon/badminton.png"> <img class="icon" src="assets/icon/cooking.png"></p>
-        <!-- <p>In my free time, I love to <img class="icon" src="assets/icon/pet.png"> cuddle with my cat Kabi, <img class="icon" src="assets/icon/luggage.png"> travel, <img class="icon" src="assets/icon/badminton.png"> play badminton, and <img class="icon" src="assets/icon/cooking.png"> cook.</p> -->
+        <!-- <p>Apart from research, I love to cuddle with my cat Kabi, travel, play badminton, and cook. <img class="icon" src="assets/icon/pet.png"> <img class="icon" src="assets/icon/luggage.png"> <img class="icon" src="assets/icon/badminton.png"> <img class="icon" src="assets/icon/cooking.png"></p> -->
 
 
         <br>
 
 
         <h2>NEWS</h2>
-
+        <!-- 📄📍📇🏅🎤🚩 -->
         <ul>
-          <li><strong>[Jan. 2023]</strong> Our paper "Synthetic Lies: Understanding AI-Generated Misinformation and Evaluating Applicability of Algorithmic and Human Solutions" got accepted to CHI2023! <i>(Top 7% of submissions)</i></li>
-          <li><strong>[Apr. 2022]</strong> I passed my PhD qualifier!</li>
-          <li><strong>[Dec. 2021]</strong> Our paper "Veteran Critical Theory as a Lens to Understand Veterans' Needs and Support on Social Media" has been accepted to CSCW!</li>
-          <li><strong>[Nov. 2021]</strong> Our paper "Perspectives on Integrating Trusted Other Feedback in Therapy for Veterans with PTSD" has been accepted to CHI!</li>
-          <li><strong>[May 2021]</strong> Starting my summer research internship at Mayo Clinic Department of AI and Informatics!</li>
+          <li>📄 <small>[Jan 2023]</small> Our paper "Synthetic Lies: Understanding AI-Generated Misinformation and Evaluating Algorithmic and Human Solutions" got accepted to CHI2023! <i>(Top 7% of submissions)</i></li>
+          <li>🚩 <small>[Apr 2022]</small> I passed my PhD qualifier!</li>
+          <li>📄 <small>[Dec 2021]</small> Our paper "Veteran Critical Theory as a Lens to Understand Veterans' Needs and Support on Social Media" is accepted to CSCW!</li>
+          <li>📄 <small>[Nov 2021]</small> Our paper "Perspectives on Integrating Trusted Other Feedback in Therapy for Veterans with PTSD" is accepted to CHI!</li>
+          <li>📇 <small>[May 2021]</small> Starting my summer research internship at Mayo Clinic Department of AI and Informatics</li>
         </ul>
         <br>
 
         <h2>PUBLICATIONS</h2>
 
         <p>
-          (CHI 23) <strong class="project">Synthetic Lies: Understanding AI-Generated Misinformation and Evaluating Applicability of Algorithmic and Human Solutions</strong> 
+          <small>(CHI 23)</small> <strong class="project">Synthetic Lies: Understanding AI-Generated Misinformation and Evaluating Algorithmic and Human Solutions</strong> 
           <br>
           <u>Jiawei Zhou</u>, Yixuan Zhang, Qianni Luo, Andrea G Parker, Munmun De Choudhury<br>
           Accepted by CHI Conference on Human Factors in Computing Systems.
@@ -75,41 +74,41 @@
         </p><br>
 
         <p>
-          (IMWUT 23) <strong class="project">Exergy: A Toolkit to Simplify Creative Applications of Wind Energy Harvesting</strong> 
+          <small>(Ubicomp 23)</small> <strong class="project">Exergy: A Toolkit to Simplify Creative Applications of Wind Energy Harvesting</strong> 
           <!-- <a target="_blank" rel="noopener noreferrer" href="">[<i class="fa-solid fa-file-pdf"></i> PDF]</a> -->
           <!-- <a target="_blank" rel="noopener noreferrer" href="">[<i class="fa-sharp fa-solid fa-link"></i>Link]</a> -->
-          <br>
-          Jung Wook Park, Sienna Xin Sun, Tingyu Cheng, Dong Whi Yoo, <u>Jiawei Zhou</u>, Youngwook Do, Gregory D. Abowd, Rosa I. Arriaga<br>
+          <!-- <a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/watch?v=Pn7xcx885IQ&ab_channel=JungWookPark">[<i class="fa-solid fa-video"></i> Video]</a> -->
+          <br>Jung Wook Park, Sienna Xin Sun, Tingyu Cheng, Dong Whi Yoo, <u>Jiawei Zhou</u>, Youngwook Do, Gregory D. Abowd, Rosa I. Arriaga<br>
           Accepted by the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (PACM IMWUT)
           <br>
-          <img src="assets/img/energy.png">
+          <img src="assets/img/exergy_userstudy.png">
         </p><br>
-        
+
         <p>
-          (CSCW 22) <strong class="project">Veteran Critical Theory as a Lens to Understand Veterans' Needs and Support on Social Media</strong> 
+          <small>(CSCW 22)</small> <a target="_blank" rel="noopener noreferrer" href="https://dl.acm.org/doi/10.1145/3512980"><strong class="project">Veteran Critical Theory as a Lens to Understand Veterans' Needs and Support on Social Media</strong></a>
           <a target="_blank" rel="noopener noreferrer" href="assets/cscw22_vct.pdf">[<i class="fa-solid fa-file-pdf"></i> PDF]</a>
-          <a target="_blank" rel="noopener noreferrer" href="https://dl.acm.org/doi/10.1145/3512980">[<i class="fa-sharp fa-solid fa-link"></i>Link]</a><br>
-          <u>Jiawei Zhou</u>, Koustuv Saha, Irene Michelle Lopez Carron, Dong Whi Yoo, Catherine R. Deeter, Munmun De Choudhury, Rosa I. Arriaga<br>
+          <!-- <a target="_blank" rel="noopener noreferrer" href="https://dl.acm.org/doi/10.1145/3512980">[<i class="fa-sharp fa-solid fa-link"></i>Link]</a> -->
+          <br><u>Jiawei Zhou</u>, Koustuv Saha, Irene Michelle Lopez Carron, Dong Whi Yoo, Catherine R. Deeter, Munmun De Choudhury, Rosa I. Arriaga<br>
           Proceedings of the ACM on Human-Computer Interaction 6, no. CSCW1 (2022): 1-28.
           <br>
           <img src="assets/img/vct.png">
         </p><br>
 
         <p>
-          (CHI 22) <strong class="project">Perspectives on Integrating Trusted Other Feedback in Therapy for Veterans with PTSD</strong> 
+          <small>(CHI 22)</small> <a target="_blank" rel="noopener noreferrer" href="https://dl.acm.org/doi/10.1145/3491102.3517513"><strong class="project">Perspectives on Integrating Trusted Other Feedback in Therapy for Veterans with PTSD</strong></a> 
           <a target="_blank" rel="noopener noreferrer" href="assets/chi22_trusted_other.pdf">[<i class="fa-solid fa-file-pdf"></i> PDF]</a>
-          <a target="_blank" rel="noopener noreferrer" href="https://dl.acm.org/doi/10.1145/3491102.3517513">[<i class="fa-sharp fa-solid fa-link"></i>Link]</a><br>
-          Hayley I. Evans, Catherine R. Deeter, <u>Jiawei Zhou</u>, Kimberly Do, Andrew M. Sherrill, Rosa I. Arriaga<br>
+          <!-- <a target="_blank" rel="noopener noreferrer" href="https://dl.acm.org/doi/10.1145/3491102.3517513">[<i class="fa-sharp fa-solid fa-link"></i>Link]</a> -->
+          <br>Hayley I. Evans, Catherine R. Deeter, <u>Jiawei Zhou</u>, Kimberly Do, Andrew M. Sherrill, Rosa I. Arriaga<br>
           In CHI Conference on Human Factors in Computing Systems (pp. 1-16).
           <br>
           <img src="assets/img/social.png">
         </p><br>
         
         <p>
-          (ICHI 22) <strong class="project">A Tale of Two Perspectives: Harvesting System Views and User Views to Understand Patient Portal Engagement</strong> 
+          <small>(ICHI 22)</small> <a target="_blank" rel="noopener noreferrer" href="https://ieeexplore.ieee.org/abstract/document/9874682"><strong class="project">A Tale of Two Perspectives: Harvesting System Views and User Views to Understand Patient Portal Engagement</strong></a> 
           <a target="_blank" rel="noopener noreferrer" href="assets/ichi22_portal_engagement.pdf">[<i class="fa-solid fa-file-pdf"></i> PDF]</a>
-          <a target="_blank" rel="noopener noreferrer" href="https://ieeexplore.ieee.org/abstract/document/9874682">[<i class="fa-sharp fa-solid fa-link"></i>Link]</a><br>
-          <u>Jiawei Zhou</u>, Rosa I. Arriaga, Hongfang Liu, Ming Huang<br>
+          <!-- <a target="_blank" rel="noopener noreferrer" href="https://ieeexplore.ieee.org/abstract/document/9874682">[<i class="fa-sharp fa-solid fa-link"></i>Link]</a> -->
+          <br><u>Jiawei Zhou</u>, Rosa I. Arriaga, Hongfang Liu, Ming Huang<br>
           IEEE 10th International Conference on Healthcare Informatics (ICHI), pp. 373-383. IEEE, 2022.
           <br>
           <img src="assets/img/ppe.png">
