--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Jiawei Zhou</title>
-    <link rel="icon" href="assets/icon/jz.png">
+    <link rel="icon" href="assets/icon/weblogo.png">
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -22,8 +22,8 @@
             <img class="profile" src="assets/zhou_profile.jpg">
         </div>
         <div class="box">
-          <p><h1>Jiawei Zhou <front-medium1>周嘉玮 </front-medium1></h1>
-          Ph.D. Student<br>Human-Centered Computing<br>Georgia Institute of Technology</p>
+          <h1>Jiawei Zhou <front-medium1>周嘉玮 </front-medium1></h1>
+          <p>Ph.D. Student<br>Human-Centered Computing<br>Georgia Institute of Technology</p>
           <!-- <p>Email: j [dot] zhou [at] gatech [dot] edu</p> -->
 
           <a target="_blank" rel="noopener noreferrer" href="mailto:j.zhou@gatech.edu"><img class="contact" src="assets/icon/email.png">Email</a><br>
@@ -63,9 +63,11 @@
         <br>
 
         <h2>PUBLICATIONS</h2>
+        <!-- <a target="_blank" rel="noopener noreferrer" href="">[<i class="fa-solid fa-file-pdf"></i> PDF]</a> -->
+        <!-- <a target="_blank" rel="noopener noreferrer" href="">[<i class="fa fa-external-link-square"></i> DOI]</a> -->
 
-        <p>
-          <small>(CHI 23)</small> <strong class="project">Synthetic Lies: Understanding AI-Generated Misinformation and Evaluating Algorithmic and Human Solutions</strong> 
+        <p class="pub">
+          <small>(CHI 23)</small> <strong class="project">Synthetic Lies: Understanding AI-Generated Misinformation and Evaluating Algorithmic and Human Solutions</strong>
           <br>
           <u>Jiawei Zhou</u>, Yixuan Zhang, Qianni Luo, Andrea G Parker, Munmun De Choudhury<br>
           Accepted by CHI Conference on Human Factors in Computing Systems.
@@ -73,10 +75,8 @@
           <img src="assets/img/ai-misinfo.png">
         </p><br>
 
-        <p>
+        <p class="pub">
           <small>(Ubicomp 23)</small> <strong class="project">Exergy: A Toolkit to Simplify Creative Applications of Wind Energy Harvesting</strong> 
-          <!-- <a target="_blank" rel="noopener noreferrer" href="">[<i class="fa-solid fa-file-pdf"></i> PDF]</a> -->
-          <!-- <a target="_blank" rel="noopener noreferrer" href="">[<i class="fa-sharp fa-solid fa-link"></i>Link]</a> -->
           <!-- <a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/watch?v=Pn7xcx885IQ&ab_channel=JungWookPark">[<i class="fa-solid fa-video"></i> Video]</a> -->
           <br>Jung Wook Park, Sienna Xin Sun, Tingyu Cheng, Dong Whi Yoo, <u>Jiawei Zhou</u>, Youngwook Do, Gregory D. Abowd, Rosa I. Arriaga<br>
           Accepted by the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (PACM IMWUT)
@@ -84,31 +84,73 @@
           <img src="assets/img/exergy_userstudy.png">
         </p><br>
 
-        <p>
-          <small>(CSCW 22)</small> <a target="_blank" rel="noopener noreferrer" href="https://dl.acm.org/doi/10.1145/3512980"><strong class="project">Veteran Critical Theory as a Lens to Understand Veterans' Needs and Support on Social Media</strong></a>
-          <a target="_blank" rel="noopener noreferrer" href="assets/cscw22_vct.pdf">[<i class="fa-solid fa-file-pdf"></i> PDF]</a>
-          <!-- <a target="_blank" rel="noopener noreferrer" href="https://dl.acm.org/doi/10.1145/3512980">[<i class="fa-sharp fa-solid fa-link"></i>Link]</a> -->
-          <br><u>Jiawei Zhou</u>, Koustuv Saha, Irene Michelle Lopez Carron, Dong Whi Yoo, Catherine R. Deeter, Munmun De Choudhury, Rosa I. Arriaga<br>
+        <p class="pub">
+          <small>(CSCW 22)</small> <strong class="project">Veteran Critical Theory as a Lens to Understand Veterans' Needs and Support on Social Media</strong>
+          <div>
+            <a target="_blank" rel="noopener noreferrer" href="assets/cscw22_vct.pdf">[<i class="fa-solid fa-file-pdf"></i> PDF]</a>
+            <a target="_blank" rel="noopener noreferrer" href="https://dl.acm.org/doi/10.1145/3512980">[<i class="fa fa-external-link-square"></i> DOI]</a>
+            <a target="_blank" class="collapsible">[<i class="fa fa-quote-right"></i> Cite]</a>
+            <div class="bibcontent">
+                @article{zhou2022veteran,<br>
+                  author = {Zhou, Jiawei and Saha, Koustuv and Lopez Carron, Irene Michelle and Yoo, Dong Whi and Deeter, Catherine R. and De Choudhury, Munmun and Arriaga, Rosa I.},<br>
+                  title = {Veteran Critical Theory as a Lens to Understand Veterans' Needs and Support on Social Media},<br>
+                  journal={Proceedings of the ACM on Human-Computer Interaction},<br>
+                  volume={6},<br>
+                  number={CSCW1},<br>
+                  pages={1--28},<br>
+                  year={2022},<br>
+                  publisher={ACM New York, NY, USA},<br>
+                  url = {https://doi.org/10.1145/3512980}<br>
+                }
+            </div>
+          </div>
+          <u>Jiawei Zhou</u>, Koustuv Saha, Irene Michelle Lopez Carron, Dong Whi Yoo, Catherine R. Deeter, Munmun De Choudhury, Rosa I. Arriaga<br>
           Proceedings of the ACM on Human-Computer Interaction 6, no. CSCW1 (2022): 1-28.
-          <br>
           <img src="assets/img/vct.png">
-        </p><br>
+        </p>
+        <br>
 
-        <p>
-          <small>(CHI 22)</small> <a target="_blank" rel="noopener noreferrer" href="https://dl.acm.org/doi/10.1145/3491102.3517513"><strong class="project">Perspectives on Integrating Trusted Other Feedback in Therapy for Veterans with PTSD</strong></a> 
-          <a target="_blank" rel="noopener noreferrer" href="assets/chi22_trusted_other.pdf">[<i class="fa-solid fa-file-pdf"></i> PDF]</a>
-          <!-- <a target="_blank" rel="noopener noreferrer" href="https://dl.acm.org/doi/10.1145/3491102.3517513">[<i class="fa-sharp fa-solid fa-link"></i>Link]</a> -->
-          <br>Hayley I. Evans, Catherine R. Deeter, <u>Jiawei Zhou</u>, Kimberly Do, Andrew M. Sherrill, Rosa I. Arriaga<br>
+
+        <p class="pub">
+          <small>(CHI 22)</small> <strong class="project">Perspectives on Integrating Trusted Other Feedback in Therapy for Veterans with PTSD</strong>
+          <div>
+            <a target="_blank" rel="noopener noreferrer" href="assets/chi22_trusted_other.pdf">[<i class="fa-solid fa-file-pdf"></i> PDF]</a>
+            <a target="_blank" rel="noopener noreferrer" href="https://dl.acm.org/doi/10.1145/3491102.3517513">[<i class="fa fa-external-link-square"></i> DOI]</a>
+            <a target="_blank" class="collapsible">[<i class="fa fa-quote-right"></i> Cite]</a>
+            <div class="bibcontent">
+                @inproceedings{evans2022perspectives,<br>
+                  title={Perspectives on Integrating Trusted Other Feedback in Therapy for Veterans with PTSD},<br>
+                  author={Evans, Hayley Irene and Deeter, Catherine R and Zhou, Jiawei and Do, Kimberly and Sherrill, Andrew M and Arriaga, Rosa I},<br>
+                  booktitle={Proceedings of the 2022 CHI Conference on Human Factors in Computing Systems},<br>
+                  pages={1--16},<br>
+                  year={2022}<br>
+                }
+            </div>
+          </div>
+          Hayley I. Evans, Catherine R. Deeter, <u>Jiawei Zhou</u>, Kimberly Do, Andrew M. Sherrill, Rosa I. Arriaga<br>
           In CHI Conference on Human Factors in Computing Systems (pp. 1-16).
           <br>
           <img src="assets/img/social.png">
         </p><br>
         
-        <p>
-          <small>(ICHI 22)</small> <a target="_blank" rel="noopener noreferrer" href="https://ieeexplore.ieee.org/abstract/document/9874682"><strong class="project">A Tale of Two Perspectives: Harvesting System Views and User Views to Understand Patient Portal Engagement</strong></a> 
-          <a target="_blank" rel="noopener noreferrer" href="assets/ichi22_portal_engagement.pdf">[<i class="fa-solid fa-file-pdf"></i> PDF]</a>
-          <!-- <a target="_blank" rel="noopener noreferrer" href="https://ieeexplore.ieee.org/abstract/document/9874682">[<i class="fa-sharp fa-solid fa-link"></i>Link]</a> -->
-          <br><u>Jiawei Zhou</u>, Rosa I. Arriaga, Hongfang Liu, Ming Huang<br>
+        <p class="pub">
+          <small>(ICHI 22)</small> <strong class="project">A Tale of Two Perspectives: Harvesting System Views and User Views to Understand Patient Portal Engagement</strong>
+          <div>
+            <a target="_blank" rel="noopener noreferrer" href="assets/ichi22_portal_engagement.pdf">[<i class="fa-solid fa-file-pdf"></i> PDF]</a>
+            <a target="_blank" rel="noopener noreferrer" href="https://doi.org/10.1109/ICHI54592.2022.00059">[<i class="fa fa-external-link-square"></i> DOI]</a>
+            <a target="_blank" class="collapsible">[<i class="fa fa-quote-right"></i> Cite]</a>
+            <div class="bibcontent">
+                @inproceedings{zhou2022tale,<br>
+                  title={A Tale of Two Perspectives: Harvesting System Views and User Views to Understand Patient Portal Engagement},<br>
+                  author={Zhou, Jiawei and Arriaga, Rosa I and Liu, Hongfang and Huang, Ming},<br>
+                  booktitle={2022 IEEE 10th International Conference on Healthcare Informatics (ICHI)},<br>
+                  pages={373--383},<br>
+                  year={2022},<br>
+                  organization={IEEE}<br>
+                }
+            </div>
+          </div>
+          <u>Jiawei Zhou</u>, Rosa I. Arriaga, Hongfang Liu, Ming Huang<br>
           IEEE 10th International Conference on Healthcare Informatics (ICHI), pp. 373-383. IEEE, 2022.
           <br>
           <img src="assets/img/ppe.png">
