--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
           <a target="_blank" rel="noopener noreferrer" href="mailto:j.zhou@gatech.edu"><img class="contact" src="assets/icon/email.png">Email</a><br>
           <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/_jiawei_zhou"><img class="contact" src="assets/icon/twitter.png">Twitter</a><br>
-          <a target="_blank" rel="noopener noreferrer" href="https://scholar.google.com/citations?user=WZZGUpMAAAAJ&hl=en"><img class="contact" src="assets/icon/scholar.png">Google Scholar</a><br>
+          <!-- <a target="_blank" rel="noopener noreferrer" href="https://scholar.google.com/citations?user=WZZGUpMAAAAJ&hl=en"><img class="contact" src="assets/icon/scholar.png">Google Scholar</a><br> -->
           <a target="_blank" rel="noopener noreferrer" href="https://www.dropbox.com/s/u7e7thbm15wpg02/Zhou_CV.pdf?dl=0"><img class="contact" src="assets/icon/cv.png">CV</a>
         </div>
         <!-- <a target="_blank" rel="noopener noreferrer" href="https://hci.social/@jiawei"><img class="contact" src="assets/icon/mastodon.png"><strong>Mastodon</strong></a><br> -->
@@ -68,21 +68,27 @@
 
         <p class="pub">
           <small>(CHI 23)</small> <strong class="project">Synthetic Lies: Understanding AI-Generated Misinformation and Evaluating Algorithmic and Human Solutions</strong>
-          <br>
+          <div>
+            <a target="_blank" rel="noopener noreferrer" href="assets/chi23_ai_misinfo.pdf">[<i class="fa-solid fa-file-pdf"></i> Preprint]</a>
+          </div>
           <u>Jiawei Zhou</u>, Yixuan Zhang, Qianni Luo, Andrea G Parker, Munmun De Choudhury<br>
           Accepted by CHI Conference on Human Factors in Computing Systems.
           <br>
           <img src="assets/img/ai-misinfo.png">
-        </p><br>
+        </p>
+        <br>
 
         <p class="pub">
           <small>(Ubicomp 23)</small> <strong class="project">Exergy: A Toolkit to Simplify Creative Applications of Wind Energy Harvesting</strong> 
-          <!-- <a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/watch?v=Pn7xcx885IQ&ab_channel=JungWookPark">[<i class="fa-solid fa-video"></i> Video]</a> -->
-          <br>Jung Wook Park, Sienna Xin Sun, Tingyu Cheng, Dong Whi Yoo, <u>Jiawei Zhou</u>, Youngwook Do, Gregory D. Abowd, Rosa I. Arriaga<br>
+          <div>
+            <a target="_blank" rel="noopener noreferrer" href="assets/imwut23_exergy.pdf">[<i class="fa-solid fa-file-pdf"></i> Preprint]</a>
+          </div>
+          Jung Wook Park, Sienna Xin Sun, Tingyu Cheng, Dong Whi Yoo, <u>Jiawei Zhou</u>, Youngwook Do, Gregory D. Abowd, Rosa I. Arriaga<br>
           Accepted by the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies (PACM IMWUT)
           <br>
           <img src="assets/img/exergy_userstudy.png">
-        </p><br>
+        </p>
+        <br>
 
         <p class="pub">
           <small>(CSCW 22)</small> <strong class="project">Veteran Critical Theory as a Lens to Understand Veterans' Needs and Support on Social Media</strong>
