--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
       <section>
         <h2>ABOUT ME</h2>
 
-        <p>I am a third-year PhD student in <a target="_blank" rel="noopener noreferrer" href="https://www.cc.gatech.edu/degree-programs/phd-human-centered-computing">Human-Centered Computing</a> at <a target="_blank" rel="noopener noreferrer" href="https://www.gatech.edu/">Georgia Tech</a>. My research broadly lies in Social Computing, Human-AI Interaction, and Health Informatics. I work in the <a target="_blank" rel="noopener noreferrer" href="https://socweb.cc.gatech.edu/">Social Dynamics and Wellbeing (SocWeB) Lab</a> under the advisory of <a target="_blank" rel="noopener noreferrer" href="http://www.munmund.net/">Dr. Munmun De Choudhury</a>.</p>
+        <p>I am a third-year PhD student in <a target="_blank" rel="noopener noreferrer" href="https://www.cc.gatech.edu/degree-programs/phd-human-centered-computing">Human-Centered Computing</a> at <a target="_blank" rel="noopener noreferrer" href="https://www.gatech.edu/">Georgia Tech</a>. My research broadly lies in Social Computing and Human-AI Interaction. I work in the <a target="_blank" rel="noopener noreferrer" href="https://socweb.cc.gatech.edu/">Social Dynamics and Wellbeing (SocWeB) Lab</a> under the advisory of <a target="_blank" rel="noopener noreferrer" href="http://www.munmund.net/">Dr. Munmun De Choudhury</a>.</p>
 
-        <p>I adopt a <strong>theory-guided approach</strong> using <strong>quantitative and qualitative methods</strong> to understand the impacts of collective narratives (e.g., misinformation, harmful speech, and counterspeech) and the role of generative AI in addressing or exacerbating related societal challenges.
+        <p>I adopt a <strong>theory-guided approach</strong> using <strong>quantitative and qualitative methods</strong> to understand the impacts of collective narratives (e.g., misinformation, harmful content, and counterspeech) and the role of generative AI in addressing or exacerbating related societal challenges.
         <!-- understand the role of technology in addressing or exacerbating problems in social interactions and health and well-being.</p> -->
 
-        <p>Combining theoretical power and machine learning, statistical analyses, and natural language processing methods, I aspire to respond to real-world challenges, such as <strong>misinformation and hate speech, (mis)use of generative AI, social support strategies, and health equity</strong>.</p>
+        <p>Combining theoretical power with machine learning, statistical analyses, and natural language processing methods, I aspire to respond to real-world challenges, such as <strong>misinformation and harmful content, (mis)use of generative AI, social support strategies, and health equity</strong>.</p>
 
         <!-- <p>Apart from research, I love to cuddle with my cat Kabi, travel, play badminton, and cook. <img class="icon" src="assets/icon/pet.png"> <img class="icon" src="assets/icon/luggage.png"> <img class="icon" src="assets/icon/badminton.png"> <img class="icon" src="assets/icon/cooking.png"></p> -->
 
