--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <section>
         <h2>ABOUT ME</h2>
 
-        <p>I am a third-year PhD student in <a target="_blank" rel="noopener noreferrer" href="https://www.cc.gatech.edu/degree-programs/phd-human-centered-computing">Human-Centered Computing</a> at <a target="_blank" rel="noopener noreferrer" href="https://www.gatech.edu/">Georgia Tech</a>. My research broadly lies in Social Computing and Human-AI Interaction. I work in the <a target="_blank" rel="noopener noreferrer" href="https://socweb.cc.gatech.edu/">Social Dynamics and Wellbeing (SocWeB) Lab</a> under the advisory of <a target="_blank" rel="noopener noreferrer" href="http://www.munmund.net/">Dr. Munmun De Choudhury</a>.</p>
+        <p>I am a PhD student in <a target="_blank" rel="noopener noreferrer" href="https://www.cc.gatech.edu/degree-programs/phd-human-centered-computing">Human-Centered Computing</a> at <a target="_blank" rel="noopener noreferrer" href="https://www.gatech.edu/">Georgia Tech</a>. My research broadly lies in Social Computing and Human-AI Interaction. I work in the <a target="_blank" rel="noopener noreferrer" href="https://socweb.cc.gatech.edu/">Social Dynamics and Wellbeing (SocWeB) Lab</a> under the advisory of <a target="_blank" rel="noopener noreferrer" href="http://www.munmund.net/">Dr. Munmun De Choudhury</a>.</p>
 
         <p>I adopt a <strong>theory-guided approach</strong> using <strong>quantitative and qualitative methods</strong> to understand the impacts of collective narratives (e.g., misinformation, harmful content, and counterspeech) and the role of generative AI in addressing or exacerbating related societal challenges.
         <!-- understand the role of technology in addressing or exacerbating problems in social interactions and health and well-being.</p> -->
